--- a/actions.html
+++ b/actions.html
@@ -54,7 +54,7 @@
     </nav>
     <nav class="navbar navbar-expand-lg navbar-light es-navbar" id="mainNavbar">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <img alt="Qamar" src="img/logo.svg" />
         </a>
         <button aria-expanded="false" aria-haspopup="true" class="btn dropdown-toggle btn-catalog"
@@ -68,7 +68,7 @@
                 <li class="es-dropdown-item">
                   <a class="es-dropdown-link" href="#">
                     <img src="img/ic_category_item.svg" />
-                    Qur’oni Karim
+                    Qur’oni KarimГлавная
                   </a>
                   <ul class="es-catalog-list">
                     <li class="es-dropdown-item">
@@ -275,7 +275,7 @@
         </form>
         <ul class="navbar-nav">
           <li class="nav-item sm-hide">
-            <a class="nav-link icon-link" href="#">
+            <a class="nav-link icon-link" href="saved-full.html">
               <img alt="Favorites" src="img/ic_archive.svg"><span>Избранное</span>
             </a>
           </li>
@@ -300,9 +300,8 @@
       <div class="container">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb es-breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Главная</a></li>
-            <li class="breadcrumb-item"><a href="#">Книги</a></li>
-            <li aria-current="page" class="breadcrumb-item active">Новые книги</li>
+            <li class="breadcrumb-item"><a href="index.html">Bosh sahifa</a></li>
+            <li aria-current="page" class="breadcrumb-item active">Aksiyalar</li>
           </ol>
         </nav>
 
@@ -316,7 +315,7 @@
               <div class="es-action-info">
                 Fiqh kitoblarining barchasi -25% chegirmada
               </div>
-              <a class="btn btn-more" href="#">KITOBLARNI KO‘RISH</a>
+              <a class="btn btn-more" href="category.html">KITOBLARNI KO‘RISH</a>
             </div>
             <div class="es-action-period">
               30 sentabrgacha
@@ -330,7 +329,7 @@
               <div class="es-action-info">
                 Fiqh kitoblarining barchasi -25% chegirmada
               </div>
-              <a class="btn btn-more" href="#">KITOBLARNI KO‘RISH</a>
+              <a class="btn btn-more" href="category.html">KITOBLARNI KO‘RISH</a>
             </div>
             <div class="es-action-period">
               30 sentabrgacha
@@ -344,7 +343,7 @@
               <div class="es-action-info">
                 Fiqh kitoblarining barchasi -25% chegirmada
               </div>
-              <a class="btn btn-more" href="#">KITOBLARNI KO‘RISH</a>
+              <a class="btn btn-more" href="category.html">KITOBLARNI KO‘RISH</a>
             </div>
             <div class="es-action-period">
               30 sentabrgacha
@@ -358,7 +357,7 @@
               <div class="es-action-info">
                 Fiqh kitoblarining barchasi -25% chegirmada
               </div>
-              <a class="btn btn-more" href="#">KITOBLARNI KO‘RISH</a>
+              <a class="btn btn-more" href="category.html">KITOBLARNI KO‘RISH</a>
             </div>
             <div class="es-action-period">
               30 sentabrgacha
@@ -370,7 +369,7 @@
 
     <section class="es-app-section">
       <div class="es-app-bg">
-        <div class="container">
+        <div class="container-fluid">
           <div class="es-app-content">
             <div class="es-app-title">
               Yanada qulaylik uchun<br>Qamar ilovasini yuklab oling
@@ -379,8 +378,8 @@
               Ilova barcha platformalarda, barcha<br>qurilmalar uchun mavjud.
             </div>
             <div class="es-app-list">
-              <a href="#"><img src="img/as.svg" /></a>
-              <a href="#"><img src="img/gp.svg" /></a>
+              <a href="#"><img src="img/as-2.svg" /></a>
+              <a href="#"><img src="img/gp-2.svg" /></a>
             </div>
 
             <div class="es-app-icons">
@@ -399,19 +398,19 @@
           <div class="footer-left">
             <ul class="nav footer-list">
               <li class="nav-item">
-                <a class="item-link" href="#">Каталог</a>
+                <a class="item-link" href="actions.html">Aksiyalar</a>
               </li>
               <li class="nav-item">
-                <a class="item-link" href="#">Бренды</a>
+                <a class="item-link" href="useful-articles.html">Foydali maqolalar</a>
               </li>
               <li class="nav-item">
-                <a class="item-link" href="#">О компании</a>
+                <a class="item-link" href="wholesale.html">Ulgurji xarid</a>
               </li>
               <li class="nav-item">
-                <a class="item-link" href="#">Акции и скидки</a>
+                <a class="item-link" href="carriers-page.html">Postavshiklar uchun</a>
               </li>
               <li class="nav-item">
-                <a class="item-link" href="#">Контакты</a>
+                <a class="item-link" href="contacts.html">Kontaktlar</a>
               </li>
             </ul>
           </div>
@@ -428,7 +427,7 @@
           <div class="footer-right">
             <ul class="nav footer-list mb-4">
               <li class="nav-item">
-                <a class="item-link" href="#">(99) 845-44-00</a>
+                <a class="item-link" href="tel:+998998454400">(99) 845-44-00</a>
               </li>
               <li class="nav-item">
                 <a class="item-link" href="#">Публичная оферта</a>
