--- a/privacy.html
+++ b/privacy.html
@@ -300,9 +300,8 @@
       <div class="container">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb es-breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Главная</a></li>
-            <li class="breadcrumb-item"><a href="#">Книги</a></li>
-            <li aria-current="page" class="breadcrumb-item active">Новые книги</li>
+            <li class="breadcrumb-item"><a href="#">Bosh sahifa</a></li>
+            <li aria-current="page" class="breadcrumb-item active">Foydalanish shartlari</li>
           </ol>
         </nav>
 
@@ -420,19 +419,19 @@
           <div class="footer-left">
             <ul class="nav footer-list">
               <li class="nav-item">
-                <a class="item-link" href="#">Каталог</a>
+                <a class="item-link" href="actions.html">Aksiyalar</a>
               </li>
               <li class="nav-item">
-                <a class="item-link" href="#">Бренды</a>
+                <a class="item-link" href="useful-articles.html">Foydali maqolalar</a>
               </li>
               <li class="nav-item">
-                <a class="item-link" href="#">О компании</a>
+                <a class="item-link" href="wholesale.html">Ulgurji xarid</a>
               </li>
               <li class="nav-item">
-                <a class="item-link" href="#">Акции и скидки</a>
+                <a class="item-link" href="carriers-page.html">Postavshiklar uchun</a>
               </li>
               <li class="nav-item">
-                <a class="item-link" href="#">Контакты</a>
+                <a class="item-link" href="contacts.html">Kontaktlar</a>
               </li>
             </ul>
           </div>
@@ -449,10 +448,10 @@
           <div class="footer-right">
             <ul class="nav footer-list mb-4">
               <li class="nav-item">
-                <a class="item-link" href="#">(99) 845-44-00</a>
+                <a class="item-link" href="tel:+998998454400">(99) 845-44-00</a>
               </li>
               <li class="nav-item">
-                <a class="item-link" href="#">Публичная оферта</a>
+                <a class="item-link" href="#">Foydalanish shartlari</a>
               </li>
             </ul>
             <div class="es-footer-info">
