--- a/action-view.html
+++ b/action-view.html
@@ -54,7 +54,7 @@
     </nav>
     <nav class="navbar navbar-expand-lg navbar-light es-navbar" id="mainNavbar">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <img alt="Qamar" src="img/logo.svg" />
         </a>
         <button aria-expanded="false" aria-haspopup="true" class="btn dropdown-toggle btn-catalog"
@@ -275,7 +275,7 @@
         </form>
         <ul class="navbar-nav">
           <li class="nav-item sm-hide">
-            <a class="nav-link icon-link" href="#">
+            <a class="nav-link icon-link" href="saved-full.html">
               <img alt="Favorites" src="img/ic_archive.svg"><span>Избранное</span>
             </a>
           </li>
@@ -300,9 +300,9 @@
       <div class="container">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb es-breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Главная</a></li>
-            <li class="breadcrumb-item"><a href="#">Книги</a></li>
-            <li aria-current="page" class="breadcrumb-item active">Новые книги</li>
+            <li class="breadcrumb-item"><a href="index.html">Bosh sahifa</a></li>
+            <li class="breadcrumb-item"><a href="actions.html">Aksiyalar</a></li>
+            <li aria-current="page" class="breadcrumb-item active">Fiqhga nazar</li>
           </ol>
         </nav>
         <div class="es-actions-list">
@@ -349,17 +349,17 @@
                 <div class="col-md-2">
                   <div class="es-product-item">
                     <div class="es-product-header">
-                      <a href="#">
+                      <a href="product-view.html">
                         <img class="img-fluid w-100" src="img/product.jpg" />
                       </a>
                       <button class="btn btn-favorite"></button>
                     </div>
                     <div class="es-product-detail">
                       <div class="es-product-category">
-                        <a href="#">Kitoblar</a>
+                        <a href="product-view.html">Kitoblar</a>
                       </div>
                       <div class="es-product-title">
-                        <a href="#">Oltin silsila to‘plami</a>
+                        <a href="product-view.html">Oltin silsila to‘plami</a>
                       </div>
                       <div class="es-product-price">
                         89,000 so‘m
@@ -378,17 +378,17 @@
                 <div class="col-md-2">
                   <div class="es-product-item">
                     <div class="es-product-header">
-                      <a href="#">
+                      <a href="product-view.html">
                         <img class="img-fluid w-100" src="img/product.jpg" />
                       </a>
                       <button class="btn btn-favorite"></button>
                     </div>
                     <div class="es-product-detail">
                       <div class="es-product-category">
-                        <a href="#">Kitoblar</a>
+                        <a href="product-view.html">Kitoblar</a>
                       </div>
                       <div class="es-product-title">
-                        <a href="#">Oltin silsila to‘plami</a>
+                        <a href="product-view.html">Oltin silsila to‘plami</a>
                       </div>
                       <div class="es-product-price">
                         89,000 so‘m
@@ -407,17 +407,17 @@
                 <div class="col-md-2">
                   <div class="es-product-item">
                     <div class="es-product-header">
-                      <a href="#">
+                      <a href="product-view.html">
                         <img class="img-fluid w-100" src="img/product.jpg" />
                       </a>
                       <button class="btn btn-favorite"></button>
                     </div>
                     <div class="es-product-detail">
                       <div class="es-product-category">
-                        <a href="#">Kitoblar</a>
+                        <a href="product-view.html">Kitoblar</a>
                       </div>
                       <div class="es-product-title">
-                        <a href="#">Oltin silsila to‘plami</a>
+                        <a href="product-view.html">Oltin silsila to‘plami</a>
                       </div>
                       <div class="es-product-price">
                         89,000 so‘m
@@ -436,17 +436,17 @@
                 <div class="col-md-2">
                   <div class="es-product-item">
                     <div class="es-product-header">
-                      <a href="#">
+                      <a href="product-view.html">
                         <img class="img-fluid w-100" src="img/product.jpg" />
                       </a>
                       <button class="btn btn-favorite"></button>
                     </div>
                     <div class="es-product-detail">
                       <div class="es-product-category">
-                        <a href="#">Kitoblar</a>
+                        <a href="product-view.html">Kitoblar</a>
                       </div>
                       <div class="es-product-title">
-                        <a href="#">Oltin silsila to‘plami</a>
+                        <a href="product-view.html">Oltin silsila to‘plami</a>
                       </div>
                       <div class="es-product-price">
                         89,000 so‘m
@@ -465,17 +465,17 @@
                 <div class="col-md-2">
                   <div class="es-product-item">
                     <div class="es-product-header">
-                      <a href="#">
+                      <a href="product-view.html">
                         <img class="img-fluid w-100" src="img/product.jpg" />
                       </a>
                       <button class="btn btn-favorite"></button>
                     </div>
                     <div class="es-product-detail">
                       <div class="es-product-category">
-                        <a href="#">Kitoblar</a>
+                        <a href="product-view.html">Kitoblar</a>
                       </div>
                       <div class="es-product-title">
-                        <a href="#">Oltin silsila to‘plami</a>
+                        <a href="product-view.html">Oltin silsila to‘plami</a>
                       </div>
                       <div class="es-product-price">
                         89,000 so‘m
@@ -494,17 +494,17 @@
                 <div class="col-md-2">
                   <div class="es-product-item">
                     <div class="es-product-header">
-                      <a href="#">
+                      <a href="product-view.html">
                         <img class="img-fluid w-100" src="img/product.jpg" />
                       </a>
                       <button class="btn btn-favorite"></button>
                     </div>
                     <div class="es-product-detail">
                       <div class="es-product-category">
-                        <a href="#">Kitoblar</a>
+                        <a href="product-view.html">Kitoblar</a>
                       </div>
                       <div class="es-product-title">
-                        <a href="#">Oltin silsila to‘plami</a>
+                        <a href="product-view.html">Oltin silsila to‘plami</a>
                       </div>
                       <div class="es-product-price">
                         89,000 so‘m
@@ -523,17 +523,17 @@
                 <div class="col-md-2">
                   <div class="es-product-item">
                     <div class="es-product-header">
-                      <a href="#">
+                      <a href="product-view.html">
                         <img class="img-fluid w-100" src="img/product.jpg" />
                       </a>
                       <button class="btn btn-favorite"></button>
                     </div>
                     <div class="es-product-detail">
                       <div class="es-product-category">
-                        <a href="#">Kitoblar</a>
+                        <a href="product-view.html">Kitoblar</a>
                       </div>
                       <div class="es-product-title">
-                        <a href="#">Oltin silsila to‘plami</a>
+                        <a href="product-view.html">Oltin silsila to‘plami</a>
                       </div>
                       <div class="es-product-price">
                         89,000 so‘m
@@ -552,17 +552,17 @@
                 <div class="col-md-2">
                   <div class="es-product-item">
                     <div class="es-product-header">
-                      <a href="#">
+                      <a href="product-view.html">
                         <img class="img-fluid w-100" src="img/product.jpg" />
                       </a>
                       <button class="btn btn-favorite"></button>
                     </div>
                     <div class="es-product-detail">
                       <div class="es-product-category">
-                        <a href="#">Kitoblar</a>
+                        <a href="product-view.html">Kitoblar</a>
                       </div>
                       <div class="es-product-title">
-                        <a href="#">Oltin silsila to‘plami</a>
+                        <a href="product-view.html">Oltin silsila to‘plami</a>
                       </div>
                       <div class="es-product-price">
                         89,000 so‘m
@@ -581,17 +581,17 @@
                 <div class="col-md-2">
                   <div class="es-product-item">
                     <div class="es-product-header">
-                      <a href="#">
+                      <a href="product-view.html">
                         <img class="img-fluid w-100" src="img/product.jpg" />
                       </a>
                       <button class="btn btn-favorite"></button>
                     </div>
                     <div class="es-product-detail">
                       <div class="es-product-category">
-                        <a href="#">Kitoblar</a>
+                        <a href="product-view.html">Kitoblar</a>
                       </div>
                       <div class="es-product-title">
-                        <a href="#">Oltin silsila to‘plami</a>
+                        <a href="product-view.html">Oltin silsila to‘plami</a>
                       </div>
                       <div class="es-product-price">
                         89,000 so‘m
@@ -610,17 +610,17 @@
                 <div class="col-md-2">
                   <div class="es-product-item">
                     <div class="es-product-header">
-                      <a href="#">
+                      <a href="product-view.html">
                         <img class="img-fluid w-100" src="img/product.jpg" />
                       </a>
                       <button class="btn btn-favorite"></button>
                     </div>
                     <div class="es-product-detail">
                       <div class="es-product-category">
-                        <a href="#">Kitoblar</a>
+                        <a href="product-view.html">Kitoblar</a>
                       </div>
                       <div class="es-product-title">
-                        <a href="#">Oltin silsila to‘plami</a>
+                        <a href="product-view.html">Oltin silsila to‘plami</a>
                       </div>
                       <div class="es-product-price">
                         89,000 so‘m
@@ -645,7 +645,7 @@
 
     <section class="es-app-section">
       <div class="es-app-bg">
-        <div class="container">
+        <div class="container-fluid">
           <div class="es-app-content">
             <div class="es-app-title">
               Yanada qulaylik uchun<br>Qamar ilovasini yuklab oling
@@ -654,8 +654,8 @@
               Ilova barcha platformalarda, barcha<br>qurilmalar uchun mavjud.
             </div>
             <div class="es-app-list">
-              <a href="#"><img src="img/as.svg" /></a>
-              <a href="#"><img src="img/gp.svg" /></a>
+              <a href="#"><img src="img/as-2.svg" /></a>
+              <a href="#"><img src="img/gp-2.svg" /></a>
             </div>
 
             <div class="es-app-icons">
@@ -674,19 +674,19 @@
           <div class="footer-left">
             <ul class="nav footer-list">
               <li class="nav-item">
-                <a class="item-link" href="#">Каталог</a>
+                <a class="item-link" href="actions.html">Aksiyalar</a>
               </li>
               <li class="nav-item">
-                <a class="item-link" href="#">Бренды</a>
+                <a class="item-link" href="useful-articles.html">Foydali maqolalar</a>
               </li>
               <li class="nav-item">
-                <a class="item-link" href="#">О компании</a>
+                <a class="item-link" href="wholesale.html">Ulgurji xarid</a>
               </li>
               <li class="nav-item">
-                <a class="item-link" href="#">Акции и скидки</a>
+                <a class="item-link" href="carriers-page.html">Postavshiklar uchun</a>
               </li>
               <li class="nav-item">
-                <a class="item-link" href="#">Контакты</a>
+                <a class="item-link" href="contacts.html">Kontaktlar</a>
               </li>
             </ul>
           </div>
